// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component > Modification > AdjustDwellTime renders empty correctly 1`] = `
<div>
  <div>
    <div>
      <div
        className="form-group"
      >
        <label
          htmlFor="Feed"
        >
          Select feed and routes
        </label>
        <div
          className="Select Select--single is-searchable"
          style={undefined}
        >
          <div
            className="Select-control"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={undefined}
          >
            <span
              className="Select-multi-value-wrapper"
              id="react-select-2--value"
            >
              <div
                className="Select-placeholder"
              >
                Select feed
              </div>
            </span>
            <span
              className="Select-arrow-zone"
              onMouseDown={[Function]}
            >
              <span
                className="Select-arrow"
                onMouseDown={[Function]}
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="form-group"
    >
      <label
        htmlFor="Selection"
      >
        Selection
      </label>
      <div
        className="btn-group btn-group-justified"
      >
        <a
          className="btn btn-sm btn-default"
          onClick={[Function]}
          tabIndex={0}
        >
          New
        </a>
        <a
          className="btn btn-sm btn-default"
          onClick={[Function]}
          tabIndex={0}
        >
          Add to
        </a>
        <a
          className="btn btn-sm btn-default"
          onClick={[Function]}
          tabIndex={0}
        >
          Remove from
        </a>
        <a
          className="btn btn-sm btn-default"
          onClick={[Function]}
          tabIndex={0}
        >
          Clear
        </a>
      </div>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="adjust-dwell-time-scale"
    >
      <input
        checked={undefined}
        id="adjust-dwell-time-scale"
        onChange={[Function]}
        type="radio"
        value="scale"
      />
       
      Scale existing dwell times by
    </label>
    <label
      htmlFor="adjust-dwell-time-speed"
    >
      <input
        checked={true}
        id="adjust-dwell-time-speed"
        onChange={[Function]}
        type="radio"
        value="speed"
      />
       
      Set new dwell time to
    </label>
  </div>
  <div
    className="form-group"
  >
    <input
      className="form-control"
      id="undefined-input-0"
      min={0}
      name={undefined}
      onChange={[Function]}
      onWheel={[Function]}
      placeholder={undefined}
      type="number"
      value={undefined}
    />
  </div>
</div>
`;

exports[`Component > Modification > AdjustDwellTime renders with data correctly 1`] = `
<div>
  <div>
    <div>
      <div
        className="form-group"
      >
        <label
          htmlFor="Feed"
        >
          Select feed and routes
        </label>
        <div
          className="Select Select--single is-searchable"
          style={undefined}
        >
          <div
            className="Select-control"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={undefined}
          >
            <span
              className="Select-multi-value-wrapper"
              id="react-select-3--value"
            >
              <div
                className="Select-placeholder"
              >
                Select feed
              </div>
            </span>
            <span
              className="Select-arrow-zone"
              onMouseDown={[Function]}
            >
              <span
                className="Select-arrow"
                onMouseDown={[Function]}
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="Patterns"
      >
        Select patterns
      </label>
      <div
        className="Select Select--multi is-clearable is-searchable has-value"
        style={undefined}
      >
        <input
          disabled={false}
          name="Patterns"
          type="hidden"
          value="mock-pattern-id"
        />
        <div
          className="Select-control"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={undefined}
        >
          <span
            className="Select-multi-value-wrapper"
            id="react-select-4--value"
          >
            <div
              className="Select-value"
              style={undefined}
              title={undefined}
            >
              <span
                aria-hidden="true"
                className="Select-value-icon"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
              >
                ×
              </span>
              <span
                aria-selected="true"
                className="Select-value-label"
                id="react-select-4--value-0"
                role="option"
              >
                Mock Pattern
                <span
                  className="Select-aria-only"
                >
                   
                </span>
              </span>
            </div>
          </span>
          <span
            aria-label="Clear all"
            className="Select-clear-zone"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            title="Clear all"
          >
            <span
              className="Select-clear"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&times;",
                }
              }
            />
          </span>
          <span
            className="Select-arrow-zone"
            onMouseDown={[Function]}
          >
            <span
              className="Select-arrow"
              onMouseDown={[Function]}
            />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="form-group"
    >
      <label
        htmlFor="Selection"
      >
        Selection
      </label>
      <div
        className="btn-group btn-group-justified"
      >
        <a
          className="btn btn-sm btn-default"
          onClick={[Function]}
          tabIndex={0}
        >
          New
        </a>
        <a
          className="btn btn-sm btn-default"
          onClick={[Function]}
          tabIndex={0}
        >
          Add to
        </a>
        <a
          className="btn btn-sm btn-default"
          onClick={[Function]}
          tabIndex={0}
        >
          Remove from
        </a>
        <a
          className="btn btn-sm btn-default"
          onClick={[Function]}
          tabIndex={0}
        >
          Clear
        </a>
      </div>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="adjust-dwell-time-scale"
    >
      <input
        checked={undefined}
        id="adjust-dwell-time-scale"
        onChange={[Function]}
        type="radio"
        value="scale"
      />
       
      Scale existing dwell times by
    </label>
    <label
      htmlFor="adjust-dwell-time-speed"
    >
      <input
        checked={true}
        id="adjust-dwell-time-speed"
        onChange={[Function]}
        type="radio"
        value="speed"
      />
       
      Set new dwell time to
    </label>
  </div>
  <div
    className="form-group"
  >
    <input
      className="form-control"
      id="undefined-input-1"
      min={0}
      name={undefined}
      onChange={[Function]}
      onWheel={[Function]}
      placeholder={undefined}
      type="number"
      value={undefined}
    />
  </div>
</div>
`;
